Closed
Bug 255991
Opened 21 years ago
Closed 21 years ago
FF builds 20040818 00 PDT and later CRASH at startup, corruption in bookmarks handling
Categories
(Firefox :: Bookmarks & History, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: Peter6, Assigned: vlad)
References
Details
(Keywords: fixed-aviary1.0)
Attachments
(1 file)
|
11.35 KB,
patch
|
shaver
:
review+
shaver
:
approval-aviary+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7.2) Gecko/20040818
Firefox/0.9.1+
Firefox (after 00 PDT 20040818 Sweetlou), FF0.9 profile, crashes at startup, no
talkback, only windows message that FF has generated errors and is closed.
Start with new profile and it works ok.
copy old bookmarks.html into new profile->CRASH
causes ?
bug 255931
bug 255934
bug 235665
CC Vlad
Old profile works fine in 20040817 official aviary build
Comment 1•21 years ago
|
||
*** Bug 256009 has been marked as a duplicate of this bug. ***
Comment 2•21 years ago
|
||
If you don;t get talkback it is becuase you are not runing a talkback enabled
build. I submitted a crash on this.
Flags: blocking-aviary1.0PR?
Flags: blocking-aviary1.0?
Comment 3•21 years ago
|
||
Odd, Firefox crashes on my profile, but works just dandy with my mother's...
Unfortunately, my bookmarks file is way too crowded to track down just what
triggers this. I can confirm that no extension causes this, though, as it
crashes in Safe Mode as well.
Also worth noting (I think), starting from a fresh profile, Firefox quits
working as soon as bookmarks.html gets replaced by my old one. The other
commonly replaced files (cookies.txt, signons.txt, key3.db, etc.) cause no
trouble at all.
A MZ Forum member also suggested that this bug was caused by bug #255931, but I
tried stripping all regex /ICON=".*"/ entries in my bookmarks.html, and it still
crashed, so this doesn't seem to have anything to do with favicon handling.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.2) Gecko/20040818
Firefox/0.9.1+
Since this is noticed on XP as well, switching OS to All. It would be nice if we
got confirmation that this bug is present in non-Windows builds as well, though.
OS: Windows 2000 → All
| Reporter | ||
Comment 4•21 years ago
|
||
(In reply to comment #2)
> If you don;t get talkback it is becuase you are not runing a talkback enabled
> build. I submitted a crash on this.
I have a talkback enabled build, but win kills FF before talkback can even step in.
| Assignee | ||
Comment 5•21 years ago
|
||
Can someone attach a bookmarks.html file that causes the crash?
I tracked this down to livemarks, if you have livemarks in your bookmarks.html
it crashes immediately on startup. Remove livemarks manually from the
bookmarks.html and Firefox starts fine. Once launched you can add livemarks as
before and they'll work untill you close Firefox and try to launch it again,
which causes the same crash.
| Assignee | ||
Comment 7•21 years ago
|
||
-> me, on it
Assignee: bsmedberg → vladimir
Component: Startup and Profile System → Bookmarks
Apparently not all livemarks cause the crash, for example the one from
Mozilla.org works fine. Mozillazine.org's livemark causes the crash however.
Here are the contents of a bookmarks.html that causes a crash
<!DOCTYPE NETSCAPE-Bookmark-file-1>
<!-- This is an automatically generated file.
It will be read and overwritten.
DO NOT EDIT! -->
<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
<TITLE>Bookmarks</TITLE>
<H1 LAST_MODIFIED="1092848779">Bookmarks</H1>
<DL><p>
<DT><H3 LAST_MODIFIED="1092848789" PERSONAL_TOOLBAR_FOLDER="true"
ID="rdf:#$yyj4F3">Bookmarks Toolbar Folder</H3>
<DD>Add bookmarks to this folder to see them displayed on the Bookmarks Toolbar
<DL><p>
<DT><H3 ADD_DATE="1092848714" LAST_MODIFIED="1092848789"
ID="rdf:#$Bgd3G2">Test</H3>
<DL><p>
<DT><A ADD_DATE="1092848769" LAST_MODIFIED="1092848791"
FEEDURL="http://mozillazine.org/contents.rdf" ID="rdf:#$Tn6oI2">Testing</A>
</DL><p>
</DL><p>
</DL><p>
| Assignee | ||
Comment 9•21 years ago
|
||
Found the bug, patch soon -- there was a missing check for bookmarks without
URLs (as manually-added live bookmarks get put in, they only have a FEEDURL),
and things walked off the deep end.
Status: NEW → ASSIGNED
| Reporter | ||
Comment 10•21 years ago
|
||
I have 2 feeds
the first one is a <a> link from my threads in Mozillazine forums
(http://forums.mozillazine.org/viewtopic.php?t=115157 see second line)
Note it has NO href in it
<a add_date="1090062337" last_modified="1092695262"
feedurl="http://www.extensionsmirror.nl/peter6/firefoxfeed.xml"
id="rdf:#$++mXo2">The Official Win32 .... [Br/Tr] builds are out.</a>
the second is via the RSS button
<a href="http://weblogs.mozillazine.org/asa/" add_date="1092780354"
last_modified="1092842289"
feedurl="http://weblogs.mozillazine.org/asa/index.rdf" id="rdf:#$slZFt">adot's
notblog*</a>
| Assignee | ||
Comment 11•21 years ago
|
||
Patch for a couple of issues, including the crashing -- missing null check that
I just replaced with shared (and good) code. Also some random junk in the
ForwardProxyDS.
| Assignee | ||
Updated•21 years ago
|
Attachment #156446 -
Flags: approval-aviary?
| Reporter | ||
Comment 12•21 years ago
|
||
should the old bookmarks.html work again or do we need to remove the "corrupted"
live bookmarks Vladimir ?
| Assignee | ||
Comment 13•21 years ago
|
||
Nope, they'll work fine.. nothing was corrupted, but memory :)
Comment 14•21 years ago
|
||
Comment on attachment 156446 [details] [diff] [review]
agg-fix-0.patch
I'd prefer NS_SUCCEEDED over an explicit check against NS_OK, but other than
that it looks improved.
(I also like a /* static */ before the nsresult of a static method, but that
may not be prevailing style in RDF-land.)
I won't make you change to using the contractid instead of the CID for getting
the RDF service this time, in the interests of expediting this crash fix. Next
time you're in there...
r+a=shaver
Attachment #156446 -
Flags: review+
Attachment #156446 -
Flags: approval-aviary?
Attachment #156446 -
Flags: approval-aviary+
| Assignee | ||
Comment 15•21 years ago
|
||
In on aviary, thanks.. I'll do the CID change soon, didn't want to muck with the
code at this point.
| Reporter | ||
Comment 16•21 years ago
|
||
WFM now on latest Sweetlou
thanks Vlad
| Assignee | ||
Comment 17•21 years ago
|
||
phew. -> FIXED
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•