b=255991, crash at startup with manually added live bookmarks in bookmarks.html, r+a=shaver